# mnswpr

./: minesweeper.py  mnswpr.py  onepager.py  pyproject.toml
