[tool.poetry]
name = "minesweeper"
version = "0.1.0"
description = "minesweeper"
authors = ["worldmaker <worldmaker18349276@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hjkl-2048 = "minesweeper:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
